syntax = "proto3";

package ru.otus.protobuf.generated;

import "google/protobuf/empty.proto";

option java_multiple_files = true;

message SequenceElementMessage {
    int32 sequenceElement = 1;
}

message SequenceRangeMessage {
    int32 from = 1;
    int32 to = 2;
}

service RemoteSequenceService {
    rpc getSequence(SequenceRangeMessage) returns (stream SequenceElementMessage);
}